tests/errors/sem_assign7.java
public class sem_assign7 {
public static void main(String[] args){
String value ; value = 'L' ;
}
}